--- a/src/component/Nav.css
+++ b/src/component/Nav.css
@@ -1,8 +1,8 @@
 .header{
-    width:60rem;
+    width:92.4rem;
     position: absolute;
     top: -1rem;
-    width: 100%;
+    /* width: 100%; */
     height: 3.5rem;
     background-color: #36416A;
     color: #fff;
