--- a/src/component/Banner.css
+++ b/src/component/Banner.css
@@ -22,30 +22,31 @@
 }
 
 
-@media only screen and (max-width:650px) {
+@media only screen and (max-width :425px){
     .bannerPortion{
-        height: 55rem;
+        height: 21rem;
     }
     .img1{
-        margin-top: 1rem;
-        margin-left: 14rem;
-        width: 53rem;
+        margin-top: 1.5rem;
+        margin-left: 1rem;
+        width: 22rem;
     } 
 
     .text1{
-        width: 78rem;
+        width: 21rem;
         position: relative;
-        top: -4rem;
-        left:10rem;
-        font-size: 3rem;
+        top: -2rem;
+        left:3rem;
+        font-size: 1.3rem;
         font-weight: 500;
     }
     .text2{
-        width: 57rem;
+        width: 21rem;
         position: relative;
-        left: 15rem;
-        top: -4rem;
-        font-size: 2rem;
+        left: 3rem;
+        top: -2.4rem;
+        font-size: 1rem;
         font-weight: 450;
+        color: #6A6A6A;
     }
 }
