--- a/src/component/Login.css
+++ b/src/component/Login.css
@@ -93,9 +93,9 @@
     .bodyLogin {
         background-color: #36416A;
         width: 25rem;
-       position: relative;
-       top: -1rem;
-       height: 36.3rem;
+       position: fixed;
+       top: 0rem;
+       height: 41.6rem;
     }
 
     .appNameLogin11 {
@@ -110,7 +110,7 @@
     .appTextLogin11 {
         width: 18rem;
         position: relative;
-        top: 3.5rem;
+        top: 3rem;
         left: 2.5rem;
         font-size: .9rem;
     }
