--- a/src/component/SignUp.css
+++ b/src/component/SignUp.css
@@ -126,13 +126,13 @@
         height: 47.8rem;
         background-color: #36416A;
         color: #fff;
-        position: relative;
+        position: fixed;
     }
 
     .appName{
         width: 5rem;
         position: absolute;
-        top:.3rem;
+        top:1.3rem;
         left: 2.5rem;
         font-size: 1.6rem;
         font-weight: 500;
@@ -140,7 +140,7 @@
     .appText{
         width: 18rem;
         position: relative;
-        top: 5.9rem;
+        top: 4.3rem;
         left: 2.5rem;
         font-size: .9rem;
     }
