--- a/src/component/Login.css
+++ b/src/component/Login.css
@@ -2,16 +2,18 @@
     background-color: #36416A;
     width: 100%;
     height: 100%;
-    position: absolute;   
+    position: absolute;
 }
-.appNameLogin11{
+
+.appNameLogin11 {
     width: 10rem;
     position: absolute;
     left: 30.5rem;
     color: #fff;
     font-size: 2rem;
 }
-.appTextLogin11{
+
+.appTextLogin11 {
     width: 40rem;
     color: #fff;
     position: absolute;
@@ -89,22 +91,24 @@
     cursor: pointer;
 }
 
-@media only screen and (max-width :425px){
+@media only screen and (max-width :425px) {
     .bodyLogin {
+        width: 100%;
+        height: 100%;
         background-color: #36416A;
         width: 25rem;
-       position: fixed;
-       top: 0rem;
-       height: 41.6rem;
+        position: fixed;
+        top: 0rem;
+        height: 51.6rem;
     }
 
     .appNameLogin11 {
         width: 5rem;
         position: absolute;
-        top:0rem;
+        top: 0rem;
         left: 2.5rem;
         font-size: 1.6rem;
-        font-weight: 500;      
+        font-weight: 500;
     }
 
     .appTextLogin11 {
@@ -147,7 +151,7 @@
         font-size: 1.4rem;
     }
 
-    .emailPic77{
+    .emailPic77 {
         width: 1.6rem;
         position: absolute;
         left: 2rem;
