--- a/src/component/SignUp.css
+++ b/src/component/SignUp.css
@@ -1,5 +1,6 @@
 .body1{
-    width: 100rem;
+    width: 100%;
+    height: 100%;
     background-color: #36416A;
     color: #fff;
     height: 47.3rem;
@@ -122,8 +123,8 @@
 
 @media only screen and (max-width :425px){
     .body1{
-        width: 25rem;
-        height: 47.8rem;
+        width: 100%;
+        height: 120%;
         background-color: #36416A;
         color: #fff;
         position: fixed;
